ActionMenu fix dark mode style

--- a/src/components/ActionMenu/ActionMenu.css
+++ b/src/components/ActionMenu/ActionMenu.css
@@ -18,6 +18,13 @@
   z-index: 1;
 }
 
+@media (prefers-color-scheme: dark) {
+  .action-menu ul {
+    background-color: var(--dark-mode-secondary-bg);
+    box-shadow: 0px 0px 4px 0px rgba(255, 235, 39, 1);
+  }
+}
+
 .action-menu li {
   padding: 0.3rem 1rem;
 }
@@ -35,6 +42,13 @@
 .action-menu li:hover,
 .action-menu li:focus {
   background-color: var(--yellow);
+}
+
+@media (prefers-color-scheme: dark) {
+  .action-menu li:hover,
+  .action-menu li:focus {
+    color: #222;
+  }
 }
 
 .action-menu button.icon {
